--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,17 @@
+enabled: true
 matchtime: 130
 peacetime: 10
 FreezerItems:
   - STONE_AXE
   - STONE_PICKAXE
   - STONE_SHOVEL
+WorldBorderSize: 100
+RunnerItems:
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
+  - OAK_WOOD_PLANKS
